--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div class="before">This is the Before Element</div><div id="container">This is the main container element</div><div class="after">This is the After Element</div>
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
