--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<div class="before"> Before Element</div><div id="container">This is the main container element</div><div class="after"> After Element</div>
+<div id="container">This is the main container element</div>
 
 
 
